<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rcarballo.rickandmortyapp.ui.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_detail_nav_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/shape_layout"
                android:layout_width="205dp"
                android:layout_height="205dp"
                android:background="@drawable/circular_bordershape_alive"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                relativeLayoutStatus="@{viewModel.selectedItem.status}"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_list"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/rounded_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{viewModel.selectedItem.image}"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        <TextView
            android:id="@+id/nameTextView"
            style="@style/NameItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.selectedItem.name}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shape_layout"
            tools:text="@string/item_name_tools_text" />

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="12dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:srcCompat="@drawable/ic_baseline_brightness"
            app:status="@{viewModel.selectedItem.status}" />

            <TextView
                android:id="@+id/statusTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/statusImage"
                app:layout_constraintStart_toEndOf="@+id/statusImage"
                app:layout_constraintTop_toTopOf="@+id/statusImage"
                tools:text="@string/item_status_tools_text"
                android:text="@{viewModel.selectedItem.status}" />

            <TextView
                android:id="@+id/separatorTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="-"
                app:layout_constraintBottom_toBottomOf="@+id/statusTextView"
                app:layout_constraintStart_toEndOf="@+id/statusTextView"
                app:layout_constraintTop_toTopOf="@+id/statusTextView" />

            <TextView
                android:id="@+id/speciesTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.selectedItem.species}"
                app:layout_constraintBottom_toBottomOf="@+id/separatorTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/separatorTextView"
                app:layout_constraintTop_toTopOf="@+id/separatorTextView"
                tools:text="@string/item_species_tools_text" />

            <TextView
                android:id="@+id/lastLocationTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/item_last_location_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTextView"
                tools:text="@string/item_last_location_tools_text" />

            <TextView
                android:id="@+id/locationTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.selectedItem.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastLocationTextView"
                tools:text="@string/item_location_tools_text" />

            <TextView
                android:id="@+id/firstSeenTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/item_first_seen_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTextView"
                tools:text="@string/item_first_seen_tools_text" />

            <TextView
                android:id="@+id/originTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                style="@style/StatusAndSpeciesItem"
                android:text="@{viewModel.selectedItem.origin.name}"
                tools:text="@string/item_origin_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstSeenTextView" />

            <TextView
                android:id="@+id/genderTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_gender_tools_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speciesTextView"
                tools:text="@string/item_gender_tools_text" />

            <TextView
                android:id="@+id/maleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.selectedItem.gender}"
                style="@style/StatusAndSpeciesItem"
                tools:text="@string/item_male_tools_text"
                app:layout_constraintBottom_toBottomOf="@+id/genderTextView"
                app:layout_constraintStart_toEndOf="@+id/genderTextView"
                app:layout_constraintTop_toTopOf="@+id/genderTextView" />

            <TextView
                android:id="@+id/typeTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_type_tools_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderTextView"
                tools:text="@string/item_type_tools_text" />

            <TextView
                android:id="@+id/typeRickTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.selectedItem.type}"
                style="@style/StatusAndSpeciesItem"
                tools:text="@string/item_rick_type_tools_text"
                app:layout_constraintBottom_toBottomOf="@+id/typeTextView"
                app:layout_constraintStart_toEndOf="@+id/typeTextView"
                app:layout_constraintTop_toTopOf="@+id/typeTextView" />

            <TextView
                android:id="@+id/numberEpisodeTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/item_number_episode_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originTextView"
                tools:text="@string/item_number_episode_tools_text" />

            <TextView
                android:id="@+id/accountEpisodeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                style="@style/StatusAndSpeciesItem"
                android:text="@{Integer.toString(viewModel.selectedItem.episode.size())}"
                tools:text="@string/item_origin_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberEpisodeTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>