<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="property"
            type="com.rcarballo.rickandmortyapp.Personaje" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/primaryLightColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/NameItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{property.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rickAndMortyImage"
                app:layout_constraintTop_toTopOf="@+id/rickAndMortyImage"
                tools:text="@string/item_name_tools_text" />

            <ImageView
                android:id="@+id/rickAndMortyImage"
                android:layout_width="@dimen/layout_width_image_list"
                android:layout_height="@dimen/layout_height_image_list"
                android:scaleType="centerCrop"
                app:imageUrl="@{property.image}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/statusTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{property.status}"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/statusImage"
                app:layout_constraintStart_toEndOf="@+id/statusImage"
                app:layout_constraintTop_toTopOf="@+id/statusImage"
                tools:text="@string/item_status_tools_text" />

            <TextView
                android:id="@+id/separatorTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="-"
                app:layout_constraintBottom_toBottomOf="@+id/statusTextView"
                app:layout_constraintStart_toEndOf="@+id/statusTextView"
                app:layout_constraintTop_toTopOf="@+id/statusTextView" />

            <TextView
                android:id="@+id/speciesTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{property.species}"
                app:layout_constraintBottom_toBottomOf="@+id/separatorTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/separatorTextView"
                app:layout_constraintTop_toTopOf="@+id/separatorTextView"
                tools:text="@string/item_species_tools_text" />

            <TextView
                android:id="@+id/lastLocationTextView"
                style="@style/LastLocationItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/item_last_location_tools_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rickAndMortyImage"
                app:layout_constraintTop_toBottomOf="@+id/statusImage"
                tools:text="@string/item_last_location_tools_text" />

            <TextView
                android:id="@+id/locationTextView"
                style="@style/StatusAndSpeciesItem"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{property.location.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rickAndMortyImage"
                app:layout_constraintTop_toBottomOf="@+id/lastLocationTextView"
                tools:text="@string/item_location_tools_text" />

            <ImageView
                android:id="@+id/statusImage"
                android:layout_width="12dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/rickAndMortyImage"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                app:srcCompat="@drawable/ic_baseline_brightness"
                app:status="@{property.status}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>